Fixed button text overflowing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1336,13 +1336,14 @@ input, select, textarea {
 
 				#header nav ul li a {
 					display: block;
-					min-width: 7.5rem;
+					min-width: 10.5rem;
 					height: 2.75rem;
 					line-height: 2.75rem;
 					padding: 0 1.25rem 0 1.45rem;
 					text-transform: uppercase;
-					letter-spacing: 0.2rem;
-					font-size: 0.8rem;
+					/* letter-spacing: 0.2rem; */
+					font-size: 0.65rem;
+					font-weight: bold;
 					border-bottom: 0;
 				}
 
